{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 90,
  "lineage": "b2d056e9-b0c5-0d8c-adf3-59a84f88659a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8404064a78a5d15",
            "domain": "vpc",
            "id": "eipalloc-0e8404064a78a5d15",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-97-107-110.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.107.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TFEKSWorkshop-ngw-ip"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-ngw-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:internet-gateway/igw-000d663d16ffa842c",
            "id": "igw-000d663d16ffa842c",
            "owner_id": "810711266228",
            "tags": {
              "Name": "TFEKSWorkshop-igw"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-igw"
            },
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8404064a78a5d15",
            "connectivity_type": "public",
            "id": "nat-07ea56b4d9ba670f2",
            "network_interface_id": "eni-0e04284536411b0f7",
            "private_ip": "10.0.0.86",
            "public_ip": "3.97.107.110",
            "subnet_id": "subnet-01d22a15e3ebf0914",
            "tags": {
              "Name": "TFEKSWorkshop-ngw"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-ngw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03078f8798a095a2f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07ea56b4d9ba670f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03078f8798a095a2f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:route-table/rtb-066d47f2987603d01",
            "id": "rtb-066d47f2987603d01",
            "owner_id": "810711266228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000d663d16ffa842c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TFEKSWorkshop-Default-rt"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-Default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d938f6d46df0fa6",
            "route_table_id": "rtb-066d47f2987603d01",
            "subnet_id": "subnet-01d22a15e3ebf0914"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0426e6a666cecb554",
            "route_table_id": "rtb-066d47f2987603d01",
            "subnet_id": "subnet-0318a7787b462caab"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:security-group/sg-017c43ff4f283d405",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-017c43ff4f283d405",
            "ingress": [],
            "name": "TFEKSWorkshop-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "810711266228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:security-group/sg-04fbc8bc32c0466f5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04fbc8bc32c0466f5",
            "ingress": [],
            "name": "TFEKSWorkshop-Worker-sg",
            "name_prefix": "",
            "owner_id": "810711266228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-Worker-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-Worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:security-group/sg-09641e1f69a82eda8",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-09641e1f69a82eda8",
            "ingress": [],
            "name": "TFEKSWorkshop-cluster-sg",
            "name_prefix": "",
            "owner_id": "810711266228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-cluster-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:security-group/sg-03a265bf2bd766ba3",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a265bf2bd766ba3",
            "ingress": [],
            "name": "TFEKSWorkshop-node-sg",
            "name_prefix": "",
            "owner_id": "810711266228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-node-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "owned"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-node-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:security-group/sg-0fdedb551a28c069c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fdedb551a28c069c",
            "ingress": [],
            "name": "TFEKSWorkshop-Public-sg",
            "name_prefix": "",
            "owner_id": "810711266228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-Public-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1499156711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09641e1f69a82eda8",
            "security_group_rule_id": "sgr-0725bb804aa5def24",
            "self": false,
            "source_security_group_id": "sg-03a265bf2bd766ba3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-2560186754",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09641e1f69a82eda8",
            "security_group_rule_id": "sgr-0ea3b18b5d5eea936",
            "self": false,
            "source_security_group_id": "sg-03a265bf2bd766ba3",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2092905420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017c43ff4f283d405",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-640715796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-017c43ff4f283d405",
            "security_group_rule_id": "sgr-0d16766d0903a0cbf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1137591616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04fbc8bc32c0466f5",
            "security_group_rule_id": "sgr-07fb53e05d75ed6cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2075502675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04fbc8bc32c0466f5",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3827867408",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03a265bf2bd766ba3",
            "security_group_rule_id": "sgr-08194ca6d3b6be7d5",
            "self": false,
            "source_security_group_id": "sg-09641e1f69a82eda8",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-422777454",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04fbc8bc32c0466f5",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3012621494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03a265bf2bd766ba3",
            "security_group_rule_id": "sgr-007740c4f50173de2",
            "self": false,
            "source_security_group_id": "sg-03a265bf2bd766ba3",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2649255630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fdedb551a28c069c",
            "security_group_rule_id": "sgr-098d02cc15f5fbabd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3353198220",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdedb551a28c069c",
            "security_group_rule_id": "sgr-04d410582a66184e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2632408264",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdedb551a28c069c",
            "security_group_rule_id": "sgr-018438a6c179c5e52",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:subnet/subnet-0084cfd722e517d13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084cfd722e517d13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810711266228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-private-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-private-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:subnet/subnet-0ac11f254d06d4e17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac11f254d06d4e17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810711266228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-private-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-private-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:subnet/subnet-01d22a15e3ebf0914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d22a15e3ebf0914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810711266228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-public-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-public-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:subnet/subnet-0318a7787b462caab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0318a7787b462caab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810711266228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-public-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-public-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05b787d5cabd6ef76"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:810711266228:vpc/vpc-05b787d5cabd6ef76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d46c492594050af",
            "default_route_table_id": "rtb-03078f8798a095a2f",
            "default_security_group_id": "sg-0ce0fbb95ad87618c",
            "dhcp_options_id": "dopt-c94c69a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b787d5cabd6ef76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03078f8798a095a2f",
            "owner_id": "810711266228",
            "tags": {
              "Name": "TFEKSWorkshop-vpc",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-vpc",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}